[project]
name = "rag-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.7.0",
    "google-genai>=1.15.0",
    "llama-index>=0.12.36",
    "llama-index-core>=0.12.36",
    "pymupdf>=1.25.5",
    "qdrant-client>=1.14.2",
    "streamlit>=1.45.1",
]
